# Advent-of-Code-2022

./: CMakeLists.txt  README.md
include/: 00.h  01.h  02.h  03.h  04.h  05.h  06.h  07.h
include/utils/: coordinate_utils.h  file_utils.h  reduction_utils.h  regex_utils.h  set_utils.h  string_utils.h
source/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp
test/: test_all.cpp
